--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 beautifulsoup4>=4.9.3
 json2html>=1.3.0
 requests>=2.25.1
+Flask>=1.1.2
+Flask-SQLAlchemy >=2.4.4
+SQLAlchemy>=1.3.22
+psycopg2>=2.8.6
