--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ requests>=2.25.1
 Flask>=1.1.2
 Flask-SQLAlchemy >=2.4.4
 SQLAlchemy>=1.3.22
-psycopg2>=2.8.6
+psycopg2-binary>=2.8.6
 APScheduler>=3.6.3
